--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,30 @@
-target/
+# Maven
+/target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-.kotlin
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
+# Eclipse, IntelliJ, NetBeans
+/.classpath
+/.project
+/.settings/
+/.idea/
+/*.iml
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Logs and temp
+*.log
+tmp/
+*.tmp
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
+# OS files
 .DS_Store
+Thumbs.db
+
+# IntelliJ
+out/
+
+# Maven wrapper
+mvnw
+mvnw.cmd
+
+# Others
+.settings/
+*.class
